martin/src/config/file/main/snapshots/martin__config__file__main__parse__tests__finalize_cors_empty_origin.snap
---
source: martin/src/config/file/main/parse.rs
expression: "render_finalize_failure(indoc::indoc!\n{\"\n                pmtiles: /tmp\n                cors:\n                  origin: []\n                  max_age: 3600\n            \"})"
---
martin::config::cors::no_origins (https://maplibre.org/martin/config-file/)

  × At least one 'origin' must be specified in the 'cors' configuration
   ╭─[config.yaml:3:11]
 2 │ cors:
 3 │   origin: []
   ·           ┬
   ·           ╰── origin list is empty
 4 │   max_age: 3600
   ╰────
  help: Either set `cors: true` (allow all origins) or provide at least one
        entry in `origin` under the cors block.
