martin/src/config/file/main/snapshots/martin__config__file__main__parse__tests__finalize_route_prefix_must_start_with_slash.snap
---
source: martin/src/config/file/main/parse.rs
expression: "render_finalize_failure(indoc::indoc!\n{\"\n                pmtiles: /tmp\n                route_prefix: oops\n            \"})"
---
martin::config::base_path (https://maplibre.org/martin/config-file/)

  × Base path must begin with '/' and be a valid URL path, but got 'oops'
   ╭─[config.yaml:2:15]
 1 │ pmtiles: /tmp
 2 │ route_prefix: oops
   ·               ──┬─
   ·                 ╰── invalid route_prefix
   ╰────
  help: The path must start with '/' and be a valid URI path, e.g. `/tiles` or
        `/api/v1`.
